--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,13 +3,20 @@
 @tailwind utilities;
 
 :root {
-   --foreground-rgb: 0, 0, 0;
-   --background-start-rgb: 214, 219, 220;
-   --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+}
+
+@layer base {
+  html {
+    scroll-padding: 3rem;
+    scroll-behavior: smooth;
+  }
 }
 
 @layer components {
-   .underline-link {
-      @apply relative max-w-max  transition-colors before:absolute before:-bottom-1 before:h-[2px] before:w-full before:origin-left before:scale-x-0 before:bg-light-orchid-500 before:transition-transform before:duration-300 hover:text-light-orchid-500    hover:before:scale-x-100;
-   }
+  .underline-link {
+    @apply relative max-w-max  transition-colors before:absolute before:-bottom-1 before:h-[2px] before:w-full before:origin-left before:scale-x-0 before:bg-light-orchid-500 before:transition-transform before:duration-300 hover:text-light-orchid-500    hover:before:scale-x-100;
+  }
 }
